    for the patch.
  * Applied an additional patch from Kouhei.
  * Allowed comma in filter strings, suggested by Kouhei.
  * 04Sep07, Changed four error classes to inherit from StandardError rather
    Exception, in order to be friendlier to irb. Suggested by Kouhei.
  * Ensure connections are closed. Thanks to Kristian Meier.
  * Minor bug fixes here and there.

=== Net::LDAP 0.0.4 / 2006-08-15

* Undeprecated Net::LDAP#modify. Thanks to Justin Forder for
  providing the rationale for this.
* Added a much-expanded set of special characters to the parser
  for RFC-2254 filters. Thanks to Andre Nathan.
* Changed Net::LDAP#search so you can pass it a filter in string form.
  The conversion to a Net::LDAP::Filter now happens automatically.
* Implemented Net::LDAP#bind_as (preliminary and subject to change).
  Thanks for Simon Claret for valuable suggestions and for helping test.
* Fixed bug in Net::LDAP#open that was preventing #open from being
  called more than one on a given Net::LDAP object.

=== Net::LDAP 0.0.3 / 2006-07-26

* Added simple TLS encryption.
  Thanks to Garett Shulman for suggestions and for helping test.

=== Net::LDAP 0.0.2 / 2006-07-12

* Fixed malformation in distro tarball and gem.
* Improved documentation.
* Supported "paged search control."
* Added a range of API improvements.
* Thanks to Andre Nathan, andre@digirati.com.br, for valuable
  suggestions.
* Added support for LE and GE search filters.
* Added support for Search referrals.
* Fixed a regression with openldap 2.2.x and higher caused
  by the introduction of RFC-2696 controls. Thanks to Andre
  Nathan for reporting the problem.
* Added support for RFC-2254 filter syntax.

=== Net::LDAP 0.0.1 / 2006-05-01

* Initial release.
* Client functionality is near-complete, although the APIs
  are not guaranteed and may change depending on feedback
  from the community.
* We're internally working on a Ruby-based implementation
  of a full-featured, production-quality LDAP server,