@@ -3,5 +3,6 @@ $LOAD_PATH.unshift "#{File.dirname(__FILE__)}/../lib"
 
 require 'rubygems'
 require 'test/unit'
+require 'shoulda'
 
 require 'net/ldap'
